tests/reference/asr-duplicate_module_procedures-3eaed23.stderr
semantic error: Entity test_01 is already present in the interface
  --> tests/errors/duplicate_module_procedures.f90:8:5 - 12:26
   |
 8 |        SUBROUTINE test_01 (x)
   |        ^^^^^^^^^^^^^^^^^^^^^^...
...
   |
12 |        END SUBROUTINE test_01
   | ...^^^^^^^^^^^^^^^^^^^^^^^^^^ 
